# mcp-plex

./: .dockerignore  AGENTS.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: principal-architect.agent.md  qdrant-vector-expert.agent.md  review-agent.agent.md  software-engineer-agent-v1.agent.md
.github/workflows/: badging.yaml  ci.yaml  docker.yaml  tag.yaml  test.yaml
docker/: pyproject.deps.toml
docs/: loader.md
docs/adr/: 0001-adopt-architecture-decision-records.md  0002-loader-pipeline-multi-worker.md
docs/plans/: loader_multiworker_plan.md
mcp_plex/: __init__.py  cache.py  config.py  imdb_cache.py  loader.py  server.py  types.py
mcp_plex/common/: AGENTS.md  text.py  (+4 more)
sample-data/: movies.json  plex-100-episodes.json  plex-100-movies.json  plex.json  tmdb.tv.json
tests/: conftest.py  test_backward_compat.py  test_cache.py  test_common_additional.py  test_common_validation.py  test_config.py  test_docker_artifacts.py  test_dockerfile.py  test_docs.py  test_enrichment_helpers.py  test_enrichment_stage.py  test_entrypoints.py  test_gather_in_batches.py  test_imdb_cache.py  test_ingestion_stage.py  test_load_from_plex.py  test_loader_alias.py  test_loader_channels_additional.py  test_loader_cli.py  test_loader_data_sources.py  test_loader_imdb_cache_additional.py  test_loader_integration.py  test_loader_logging.py  test_loader_orchestrator.py  test_loader_runtime_additional.py  test_loader_unit.py  test_persistence_stage.py  test_qdrant_manager.py  test_readme.py  test_repro_disabled_tools.py  test_server.py  test_server_cli.py  test_server_config_additional.py  test_server_internal_additional.py  test_server_media_resources_additional.py  test_server_media_utils.py  test_server_tool_responses_additional.py  test_strip_leading_article.py
(+41 files in other folders)
