[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-plex"
version = "2.0.15"

description = "Plex-Oriented Model Context Protocol Server"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastmcp>=2.11.2",
  "fastapi>=0.115.0",
  "pydantic>=2.11.7",
  "plexapi>=4.17.0",
  "qdrant-client[fastembed-gpu]>=1.15.1",
  "rapidfuzz>=3.13.0",
  "scikit-learn>=1.7.1",
  "httpx>=0.27.0",
  "sentence-transformers>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.0",
  "pytest>=8.4.1",
  "coverage[toml]>=7.6.10",
]

[project.scripts]
load-data = "mcp_plex.loader.cli:main"
mcp-server = "mcp_plex.server.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_plex*"]

[[tool.uv.index]]
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"

[tool.coverage.run]
source = ["mcp_plex"]
relative_files = true

[tool.coverage.report]
omit = ["tests/*"]
